--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <h1>Hellow World</h1>
 	<h2>Introducing the Accio Ispum</h2>
 
-	<p>Accio ipsum dolor sit amet,join course,solve assignment ,get placed above 5 lpa and live life king size</p>
+	<p>Accio ipsum dolor sit amet, join course, solve assignment , get placed above 5 lpa and live life king size.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
