--- a/main.html
+++ b/main.html
@@ -8,9 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 <h1>Hello World</h1>
 <h2>Introducing the Accio Ipsum</h2>
-<p>Accio ipsum dolor sit amet, join course, solve assignment , get placed above 5 lpa and live life king size.</p>
+<p>Accio ipsum dolor sit amet, join course, solve assignment , get placed above 5 lpa and live life king size.</p></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
